--- a/app.html
+++ b/app.html
@@ -14,11 +14,12 @@
   <div id="main">
     <div id="home">Bem-vindo ao Textshare!</div>
     <div id="editor" style="display:none;">
-      <textarea id="note-content"></textarea>
+      <textarea id="note-content" placeholder="Escreva aqui..."></textarea>
       <div>
         <label><input type="checkbox" id="public-toggle" /> Público</label>
         <button id="delete-note">🗑️</button>
       </div>
+      <p id="share-link"></p>
     </div>
   </div>
 </body>
