--- a/login.html
+++ b/login.html
@@ -14,5 +14,6 @@
     <button id="submit-btn">Entrar</button>
     <p id="toggle-form">Não tem uma conta? Crie uma</p>
     <div id="toast"></div>
+  </div>
 </body>
 </html>
