--- a/pagina.html
+++ b/pagina.html
@@ -2,11 +2,11 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Textshare - Página</title>
+  <title>Textshare - Nota</title>
   <link rel="stylesheet" href="assets/pagina.css" />
   <script type="module" src="assets/pagina.js" defer></script>
 </head>
 <body>
-  <div id="note-content"></div>
+  <div id="content"></div>
 </body>
 </html>
