--- a/app.html
+++ b/app.html
@@ -14,6 +14,7 @@
   <div id="main">
     <div id="home">Bem-vindo ao Textshare!</div>
     <div id="editor" style="display:none;">
+      <input id="note-title" placeholder="Título da nota" />
       <textarea id="note-content" placeholder="Escreva aqui..."></textarea>
       <div>
         <label><input type="checkbox" id="public-toggle" /> Público</label>
