--- a/pagina.html
+++ b/pagina.html
@@ -7,6 +7,7 @@
   <script type="module" src="assets/pagina.js" defer></script>
 </head>
 <body>
+  <h1 id="note-title"></h1>
   <div id="content"></div>
 </body>
 </html>
