--- a/p.html
+++ b/p.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Nota Bonitinha</title>
-  <link rel="stylesheet" href="assets/pagina.css" />
+  <link rel="stylesheet" href="assets/p.css" />
   <script type="module" src="assets/p.js" defer></script>
 </head>
 <body>
