--- a/p.html
+++ b/p.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Nota Bonitinha</title>
+  <title>Nota</title>
   <link rel="stylesheet" href="assets/p.css" />
   <script type="module" src="assets/p.js" defer></script>
 </head>
