--- a/app.html
+++ b/app.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Textshare</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="256x256"/>
   <link rel="stylesheet" href="assets/app.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js" defer></script>
   <script type="module" src="assets/app.js" defer></script>
