--- a/p.html
+++ b/p.html
@@ -7,7 +7,9 @@
   <script type="module" src="assets/p.js" defer></script>
 </head>
 <body>
-  <h1 id="note-title"></h1>
-  <textarea id="content"></textarea>
+  <div class="container">
+    <h1 id="note-title"></h1>
+    <textarea id="content"></textarea>
+  </div>
 </body>
 </html>
