--- a/p.html
+++ b/p.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1 id="note-title"></h1>
-    <textarea id="content"></textarea>
+    <textarea id="content" disabled></textarea>
   </div>
 </body>
 </html>
