--- a/p.html
+++ b/p.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 id="note-title"></h1>
+    <span id="note-title"></span>
     <textarea id="content" disabled></textarea>
   </div>
 </body>
