--- a/p.html
+++ b/p.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Nota</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="256x256"/>
   <link rel="stylesheet" href="assets/p.css" />
   <script type="module" src="assets/p.js" defer></script>
 </head>
