--- a/p.html
+++ b/p.html
@@ -12,5 +12,8 @@
     <span id="note-title"></span>
     <textarea id="content" disabled></textarea>
   </div>
+  <div class="footer">
+    Made with ❤️ <a href="https://landowski.github.io/textshare/">Textshare</a>
+  </div>
 </body>
 </html>
