--- a/p.html
+++ b/p.html
@@ -13,7 +13,7 @@
     <textarea id="content" disabled></textarea>
   </div>
   <div class="footer">
-    Made with ❤️ <a href="https://landowski.github.io/textshare/">Textshare</a>
+    Made with ❤️ <a href="https://landowski.github.io/textshare/" target="_blank">Textshare</a>
   </div>
 </body>
 </html>
